Selection menu overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ html, body {
   padding: 20px;
   padding-top: 5px;
   background-color: #555;
+  overflow: auto;
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
       -ms-box-sizing: border-box;
